<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@+id/nav_map">
    <action
        android:id="@+id/action_global_nav_map"
        app:destination="@id/nav_map"
        app:launchSingleTop="true">
        <argument
            android:name="LOCATION_ARGS"
            android:defaultValue="0"
            app:argType="integer" />
    </action>
    <action
        android:id="@+id/action_global_favorPublishedView"
        app:destination="@id/favorPublishedView">
        <argument
            android:name="FAVOR_ARGS"
            android:defaultValue="@null"
            app:argType="string" />
    </action>
    <action
        android:id="@+id/action_global_favorEditingView"
        app:destination="@id/favorEditingView">
        <argument
            android:name="FAVOR_VALUE_ARGS"
            android:defaultValue="@null"
            app:argType="ch.epfl.favo.favor.Favor" />
    </action>
    <action
        android:id="@+id/action_global_nav_account"
        app:destination="@id/nav_account"
        app:launchSingleTop="true" />
    <action
        android:id="@+id/action_global_nav_share"
        app:destination="@id/nav_share" />


    <fragment
        android:id="@+id/nav_account"
        android:name="ch.epfl.favo.view.tabs.UserAccountPage"
        android:label="@string/account"
        tools:layout="@layout/fragment_user_account" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="ch.epfl.favo.view.tabs.shop.ShopPage"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@id/nav_settings"
        android:name="ch.epfl.favo.view.tabs.FragmentSettings"
        android:label="@string/settings" />

    <fragment
        android:id="@id/nav_about"
        android:name="ch.epfl.favo.view.tabs.FragmentAbout"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_share"
        android:label="@string/share" />
    <fragment
        android:id="@+id/userInfoView"
        android:name="ch.epfl.favo.view.tabs.UserInfoPage"
        android:label="User Info Page"
        tools:layout="@layout/fragment_user_info" />
    <fragment
        android:id="@+id/chatView"
        android:name="ch.epfl.favo.chat.ChatPage"
        android:label="Chat">


        <action
            android:id="@+id/action_nav_chatView_to_UserInfoPage"
            app:destination="@id/userInfoView">
            <argument
                android:name="USER_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_chatView_to_nav_map"
            app:destination="@id/nav_map"
            app:launchSingleTop="true">
            <argument
                android:name="LOCATION_ARGS"
                android:defaultValue="0"
                app:argType="integer" />
            <argument
                android:name="LONGITUDE_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
            <argument
                android:name="LATITUDE_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>


    </fragment>
    <fragment
        android:id="@+id/nav_map"
        android:name="ch.epfl.favo.view.tabs.MapPage"
        android:label="Map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_nav_map_to_nearby_favor_list"
            app:destination="@id/nav_nearby_favor_list"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_nav_map_to_nav_favorlist"
            app:destination="@id/nav_favorList"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_nav_map_to_favorEditingView"
            app:destination="@id/favorEditingView">
            <argument
                android:name="FAVOR_VALUE_ARGS"
                android:defaultValue="@null"
                app:argType="ch.epfl.favo.favor.Favor" />
            <argument
                android:name="FAVOR_SOURCE"
                android:defaultValue="@null"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_nav_map_to_chatView"
            app:destination="@id/chatView"
            app:launchSingleTop="true"
            app:popUpTo="@id/chatView">
            <argument
                android:name="LOCATION_ARGS"
                android:defaultValue="@null"
                app:argType="com.google.android.gms.maps.model.LatLng" />
        </action>
        <action
            android:id="@+id/action_nav_map_to_favorPublishedView"
            app:destination="@id/favorPublishedView">
            <argument
                android:name="FAVOR_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_nav_map_to_favorPublishedView_without_return"
            app:destination="@id/favorPublishedView"
            app:popUpTo="@+id/favorPublishedView"
            app:popUpToInclusive="true">
            <argument
                android:name="FAVOR_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>


        <action
            android:id="@+id/action_nav_map_to_favorPublishedView_via_RequestView"
            app:destination="@id/favorPublishedView"
            app:popUpTo="@+id/favorEditingView"
            app:popUpToInclusive="true">
            <argument
                android:name="FAVOR_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>

        <action
            android:id="@+id/action_nav_map_to_userInfoView"
            app:destination="@id/userInfoView">
            <argument
                android:name="USER_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>
        <argument
            android:name="FAVOR_VALUE_ARGS"
            android:defaultValue="@null"
            app:argType="ch.epfl.favo.favor.Favor" />
    </fragment>
    <fragment
        android:id="@+id/nav_nearby_favor_list"
        android:name="ch.epfl.favo.view.tabs.favorList.NearbyFavorList"
        android:label="NearbyList"
        tools:layout="@layout/fragment_nearby_favor_list">
        <action
            android:id="@+id/action_nav_nearby_list_to_favorPublishedView"
            app:destination="@id/favorPublishedView">
            <argument
                android:name="FAVOR_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_nav_nearby_favor_list_to_chatView"
            app:destination="@id/chatView" />

    </fragment>
    <fragment
        android:id="@+id/nav_favorList"
        android:name="ch.epfl.favo.view.tabs.favorList.MyFavorsPage"
        android:label="FavorView"
        tools:layout="@layout/fragment_favorpage">
        <action
            android:id="@+id/action_nav_favorlist_to_favorPublishedView"
            app:destination="@id/favorPublishedView">
            <argument
                android:name="FAVOR_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_nav_favorList_to_chatView"
            app:destination="@id/chatView">
            <argument
                android:name="FAVOR_ID"
                android:defaultValue="@null"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/favorEditingView"
        android:name="ch.epfl.favo.view.tabs.addFavor.FavorEditingView"
        android:label="FavorEditingView"
        tools:layout="@layout/fragment_favor_editing_view">
        <action
            android:id="@+id/action_nav_favorEditingView_to_favorPublishedView"
            app:destination="@id/favorPublishedView"
            app:popUpTo="@+id/favorEditingView"
            app:popUpToInclusive="true">
            <argument
                android:name="FAVOR_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_nav_favorEditingViewAfterReEnable_to_favorPublishedView"
            app:destination="@id/favorPublishedView"
            app:popUpTo="@+id/favorPublishedView"
            app:popUpToInclusive="true">
            <argument
                android:name="FAVOR_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/favorPublishedView"
        android:name="ch.epfl.favo.view.tabs.addFavor.FavorPublishedView"
        android:label="FavorPublishedView"
        tools:layout="@layout/fragment_favor_published_view">

        <action
            android:id="@+id/action_nav_favorPublishedView_to_chatView"
            app:destination="@id/chatView" />

        <action
            android:id="@+id/action_nav_favorPublishedView_to_UserInfoPage"
            app:destination="@id/userInfoView">
            <argument
                android:name="USER_ARGS"
                android:defaultValue="@null"
                app:argType="string" />
        </action>

        <action
            android:id="@+id/action_nav_favorPublishedView_to_favorEditingView"
            app:destination="@id/favorEditingView">
            <argument
                android:name="FAVOR_VALUE_ARG"
                android:defaultValue="@null"
                app:argType="ch.epfl.favo.favor.Favor" />
            <argument
                android:name="FAVOR_SOURCE"
                android:defaultValue="@null"
                app:argType="string" />
        </action>

    </fragment>

</navigation>