...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/hamburger_menu_button"
        android:layout_width="@dimen/hamburger_button_size"
        android:layout_height="@dimen/hamburger_button_size"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hamb_menu_button"
        android:elevation="1dp"
...
            android:textStyle="bold"
            android:visibility="gone" />

    </ch.epfl.favo.view.NonClickableToolbar>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
        app:layout_constraintLeft_toLeftOf="parent"
...
